[gd_scene load_steps=23 format=3 uid="uid://cmau2kc2pmpqb"]

[ext_resource type="Script" path="res://Main.gd" id="1_7q2ng"]
[ext_resource type="Script" path="res://Player.gd" id="1_mjm18"]
[ext_resource type="Texture2D" uid="uid://bp2momv1uv34b" path="res://assets/char/right.png" id="2_swv13"]
[ext_resource type="Texture2D" uid="uid://b88fcc4wwyimv" path="res://assets/char/walk_down/down.png" id="3_jyhgl"]
[ext_resource type="Texture2D" uid="uid://cpsh16u4ck4r3" path="res://assets/char/walk_down/walk1.png" id="4_qva6d"]
[ext_resource type="Texture2D" uid="uid://2cetnnp0wg57" path="res://assets/char/walk_down/walk2.png" id="5_glada"]
[ext_resource type="Texture2D" uid="uid://ciwkqsg1hu75e" path="res://assets/char/walk_right/walk1.png" id="6_ld7r8"]
[ext_resource type="Texture2D" uid="uid://b2sfby8u2v3ip" path="res://assets/char/walk_right/walk2.png" id="7_w27pr"]
[ext_resource type="Texture2D" uid="uid://iljipbmoxpt1" path="res://assets/char/walk_up/up.png" id="8_ys7bw"]
[ext_resource type="Texture2D" uid="uid://wlmi5uvc7b25" path="res://assets/char/walk_up/walk1.png" id="9_v4g8h"]
[ext_resource type="Texture2D" uid="uid://clu58fdeva3fc" path="res://assets/char/walk_up/walk2.png" id="10_0ykef"]
[ext_resource type="PackedScene" uid="uid://cdx10yjwmstwt" path="res://cafe.tscn" id="11_2xiv6"]
[ext_resource type="PackedScene" uid="uid://b6vaahlue6ajw" path="res://seat.tscn" id="13_c0g2u"]
[ext_resource type="PackedScene" uid="uid://dqjj87hxxviuc" path="res://ticket_rail.tscn" id="14_0fk2e"]
[ext_resource type="PackedScene" uid="uid://vnyn4tebmlb7" path="res://menu.tscn" id="15_vgina"]
[ext_resource type="PackedScene" uid="uid://2wrk5lcp3wli" path="res://kitchen.tscn" id="16_5dmmt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kekha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jyhgl")
}, {
"duration": 1.0,
"texture": ExtResource("4_qva6d")
}, {
"duration": 1.0,
"texture": ExtResource("3_jyhgl")
}, {
"duration": 1.0,
"texture": ExtResource("5_glada")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_swv13")
}, {
"duration": 1.0,
"texture": ExtResource("6_ld7r8")
}, {
"duration": 1.0,
"texture": ExtResource("2_swv13")
}, {
"duration": 1.0,
"texture": ExtResource("7_w27pr")
}],
"loop": true,
"name": &"walk_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ys7bw")
}, {
"duration": 1.0,
"texture": ExtResource("9_v4g8h")
}, {
"duration": 1.0,
"texture": ExtResource("8_ys7bw")
}, {
"duration": 1.0,
"texture": ExtResource("10_0ykef")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e50dm"]
size = Vector2(12, 3)

[sub_resource type="Curve2D" id="Curve2D_38qbg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -24, 80, 0, 0, 0, 0, 152, 80, 2.08165e-12, 2.08165e-12, 2.08165e-12, 2.08165e-12, 152, 72, 2.08165e-12, 2.08165e-12, 2.08165e-12, 2.08165e-12, 195, 72, 0, 0, 0, 0, 195, 97, 0, 0, 0, 0, -24, 97)
}
point_count = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66cgp"]
size = Vector2(10.0005, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krvro"]
size = Vector2(18, 14)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ggbhc"]
vertices = PackedVector2Array(117, -2, 119, -2, 119, 55, 117, 56, 173, 55, 173, 56)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(2, 4, 5, 3), PackedInt32Array(0, 0, 2)])
outlines = Array[PackedVector2Array]([PackedVector2Array(117, -2, 119, -2, 119, 55, 173, 55, 173, 56, 117, 56, 117, -2)])

[node name="Node2D" type="Node2D"]
y_sort_enabled = true
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_7q2ng")

[node name="Player" type="CharacterBody2D" parent="."]
y_sort_enabled = true
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_mjm18")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(2.08165e-12, 2.08165e-12)
sprite_frames = SubResource("SpriteFrames_kekha")
animation = &"walk_right"
frame = 1
frame_progress = 0.804825
offset = Vector2(2.08165e-12, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("RectangleShape2D_e50dm")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Player"]
path_desired_distance = 2.0
target_desired_distance = 2.0

[node name="Menu" parent="." instance=ExtResource("15_vgina")]
position = Vector2(128, 14)

[node name="CafeLevel" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(2.08165e-12, 27)

[node name="CafeEnv" parent="CafeLevel" instance=ExtResource("11_2xiv6")]

[node name="CustomerPath" type="Path2D" parent="CafeLevel"]
y_sort_enabled = true
position = Vector2(-0.0012722, 0)
scale = Vector2(0.999947, 1)
curve = SubResource("Curve2D_38qbg")

[node name="OrderZone" type="Area2D" parent="CafeLevel/CustomerPath"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CafeLevel/CustomerPath/OrderZone"]
z_index = 1
position = Vector2(154.009, 67)
shape = SubResource("RectangleShape2D_66cgp")
debug_color = Color(0.929412, 0, 0.654902, 0.419608)

[node name="ExitZone" type="Area2D" parent="CafeLevel/CustomerPath"]
position = Vector2(0.00127227, 0)
scale = Vector2(1.00005, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CafeLevel/CustomerPath/ExitZone"]
position = Vector2(-26, 99)
shape = SubResource("RectangleShape2D_krvro")

[node name="Seat" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(210, 104)
direction = 3

[node name="Seat2" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(233, 104)
direction = 2

[node name="Seat3" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(159, 134)

[node name="Seat4" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(107, 134)

[node name="Seat5" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(108, 108)
direction = 1

[node name="Seat6" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(65, 134)

[node name="Seat7" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(50, 134)

[node name="Seat8" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(27, 134)

[node name="Seat9" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(144, 134)

[node name="Seat10" parent="CafeLevel" instance=ExtResource("13_c0g2u")]
position = Vector2(125, 134)

[node name="EnterPoint" type="Node2D" parent="CafeLevel"]
position = Vector2(118, 2.08165e-12)

[node name="RegisterPoint" type="Node2D" parent="CafeLevel"]
position = Vector2(154, 55)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="CafeLevel"]
navigation_polygon = SubResource("NavigationPolygon_ggbhc")

[node name="TicketRail" parent="." instance=ExtResource("14_0fk2e")]
z_index = 3
position = Vector2(0, -25)

[node name="KitchenLevel" parent="." instance=ExtResource("16_5dmmt")]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)

[editable path="CafeLevel/Seat"]
[editable path="CafeLevel/Seat2"]
[editable path="CafeLevel/Seat3"]
[editable path="CafeLevel/Seat4"]
[editable path="CafeLevel/Seat5"]
[editable path="CafeLevel/Seat6"]
[editable path="CafeLevel/Seat7"]
[editable path="CafeLevel/Seat8"]
[editable path="CafeLevel/Seat9"]
[editable path="CafeLevel/Seat10"]
